# etail_marketplaces_sdk

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  STEPS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api/aggregators/: index.html
api/core/: index.html
api/marketplaces/: index.html
api/models/: index.html
api/sinks/: index.html
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  order_field_mapping.csv  order_item_field_mapping.csv  stock_field_mapping.csv
docs/api/: aggregators.md  core.md  marketplaces.md  models.md  sinks.md
docs/diagrams/: architecture.mmd  class_diagram.mmd
etail_marketplaces_sdk/: __init__.py
etail_marketplaces_sdk/aggregators/: __init__.py  base.py
etail_marketplaces_sdk/aggregators/channelengine/: __init__.py  client.py  mappers.py
etail_marketplaces_sdk/aggregators/lengow/: __init__.py  client.py  mappers.py
etail_marketplaces_sdk/aggregators/shopping_feed/: __init__.py  client.py  mappers.py
etail_marketplaces_sdk/core/: __init__.py  base_client.py  credentials.py  decimal_utils.py  exceptions.py  streams.py
etail_marketplaces_sdk/marketplaces/: __init__.py  base.py
etail_marketplaces_sdk/marketplaces/manomano/: __init__.py  client.py  mappers.py
etail_marketplaces_sdk/marketplaces/mirakl/: __init__.py  client.py  mappers.py
etail_marketplaces_sdk/models/: __init__.py  ad.py  address.py  analytics.py  brand.py  invoice.py  order.py  product.py  return_.py  review.py  settlement.py  shipment.py  stock.py
etail_marketplaces_sdk/outputs/: __init__.py  base.py  bigquery.py  postgres.py  supabase.py
etail_marketplaces_sdk/utils/: __init__.py  dataframe.py
getting-started/: index.html
search/: search_index.json
specs/aggregators/channelengine/: openapi.json
specs/aggregators/lengow/: openapi.json
specs/aggregators/shopping_feed/: account.yml  auth.yml  catalog.yml  catalog_product.yml  channel.yml  feed.yml  openapi.json  order.yml  store.yml  taxonomy.yml  ticket.yml  timeline.yml
specs/marketplaces/manomano/: openapi.json
specs/marketplaces/mirakl/: front_openapi.json  openapi.json  operator_openapi.json  seller_openapi.json
tests/: conftest.py  support.py  test_catalogue_mappers.py  test_channelengine_client_http.py  test_decimal_utils.py  test_invoice_mappers.py  test_order_mappers.py  test_shipment_mappers.py  test_stock_mappers.py
tests/fixtures/catalogue/: channelengine_product.json  lengow_product_row.json  mirakl_offer.json  shoppingfeed_product.json
(+16 files in other folders)
